# ml-self-study

./: Modelfile  alesson4_fine_tuning.py  lec3_mini_copilot.py  lesson01_learning_curve_exercise.ipynb  lesson02_nlp_with_pytorch.ipynb  lesson03_nlp_with_pytorch.ipynb  lesson03_transformers_in_ollama.ipynb  optional_hypothesis_testing.ipynb  pyproject.toml
