[project]
name = "ai-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "jupyterlab>=4.3.8",
    "matplotlib>=3.7.5",
    "notebook>=7.3.3",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
]
