[project]
name = "ai-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "jupyterlab>=4.3.8",
    "matplotlib>=3.7.5",
    "notebook>=7.3.3",
    "numpy<2",
    "pandas>=2.0.3",
    "portalocker>=2.0.0",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "torch==2.3.0",
    "torchdata==0.9.0",
    "torchtext==0.18.0",
]
